--- a/pages/p2/1019733.md
+++ b/pages/p2/1019733.md
@@ -1,4 +1,4 @@
-### 胡耀邦之子批“闭关锁国”红二代能凝聚反习力量吗？(视频)
+### 习近平获封“人民领袖”；习还没连任 已露怯！(视频)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -9,32 +9,74 @@
  <div id="story_video" style="text-align: center;margin-top: 20px;">
  </div>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/胡耀邦" target="_blank">
-   胡耀邦
-  </span>
-  之子批“闭关锁国”红二代能凝聚反习力量吗？
+  大家好，欢迎来到《看风云》节目，我是明镜。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
+ </p>
+ <div id="txt-mid1-t21-2017">
+  
+
+---
+
+#### [ 🎬  免翻墙浏览墙外禁闻、观看YouTube热门视频及电视直播](https://github.com/gfw-breaker/HelloWorld)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
+
+
+  </div>
+ </div>
+ <p dir="ltr">
+  我们首先聊聊，
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
+  </span>
+  戴上了“人民领袖”的头衔，意味着什么？
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
+   </span>
+  </span>
+ </p>
+ <p dir="ltr">
+  然后再聊一下，习近平在讲话中引用“吾往矣”，这句话被
+  <span href="https://www.secretchina.com/news/gb/tag/中共" target="_blank">
+   中共
+  </span>
+  喉舌宣传，想传达什么信号？
+ </p>
+ <p dir="ltr">
+  我们最后聊聊，知名企业大佬们都去了哪里？
  </p>
  <p>
   =====================
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
-   </span>
-  </span>
  </p>
  <p>
-  大家好，欢迎收看《热点快报》。
+  大家好，欢迎收看《看风云》，我是主持人明镜。
  </p>
  <p>
   喜欢我们的频道，欢迎点赞，订阅，评论，并开启小铃铛🔔就可在第一时间观看精彩内容哦〜
  </p>
+ <div>
+  <center>
+   <div id="div-gpt-ad-1589559869784-0">
+   </div>
+  </center>
+ </div>
  <p>
   ●《看中国》订阅频道
   <br>
-   https://www.youtube.com/channel/UCLJYH0o60tlyAdy3g5GNrKw
+   <span href="https://www.youtube.com/channel/UCLJYH0o60tlyAdy3g5GNrKw">
+    <strong>
+     https://www.youtube.com/channel/UCLJYH0o60tlyAdy3g5GNrKw
+    </strong>
+   </span>
+   <div>
+    <center>
+     <div id="div-gpt-ad-1589559869784-0">
+     </div>
+    </center>
+   </div>
    <p>
     来源:
     <span href="/news/gb/tag/看中国视频  ">
@@ -43,7 +85,7 @@
    </p>
    <p>
     本文短网址:
-    <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb4GQF"/>
+    <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb4HHJ"/>
     版权所有，任何形式转载需看中国授权许可。
     <span style="color:red">
      严禁建立镜像网站.
@@ -89,13 +131,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/1016443.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/1016443.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/1016443.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2022/09/11/1016443.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/1019733.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/1019733.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/1019733.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2022/10/21/1019733.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p2/1016443.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/1019733.md' width='0px' height='0px'/>
