--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -42,12 +42,12 @@
 #### [ 王岐山等人缺席二十大代表团讨论](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848317.md)
 #### [ 章天亮: 习近平打包提拔亲信 此人排名最关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663636.md)
 #### [ 【禁闻】二十大常委名单海外热传 学者解析真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555074.md)
-#### [ 分析：二十大报告揭习近平缺乏安全感(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019471.md)
 #### [ 二十大习近平讲话口误 全网秒遭封杀(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019476.md)
+#### [ 分析：二十大报告揭习近平缺乏安全感(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019471.md)
 #### [ 中共秘密备战手法曝光 专家：台海战争或提前](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13848749.md)
 #### [ 章天亮: 对二十大结果的分析及给大家的建议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663939.md)
 #### [ 时代倒退？为何他们离开中国陆续出走美国(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019593.md)
 #### [ 二十大浇灭市场希望 中国资产惨遭抛售 文革式计划经济卷土重来](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663996.md)
 #### [ 四通桥横幅事件发酵 海内外接力声援、响应](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849373.md)
 #### [ 军方二十大表态 王沪宁去留 习讲话透露可怕目标](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555482.md)
-#### [ 20大报告聚焦安全 分析：中共走上不归路](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13849083.md)
+#### [ 二十大采访手记：你被大数据捕捉到了(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019652.md)
