--- a/pages/nsc413/n13849744.md
+++ b/pages/nsc413/n13849744.md
@@ -10,9 +10,21 @@
  打擂台！港台媒体同日曝常委名单截然相反，谁更合理？李克强或裸退，中委建议名单都缺了谁？政治局2人带头，“人民领袖”呼之欲出；恐非偶然，外交战狼英国打人是精心策划？ (《远见快评》提供）
 </div></div><hr/>
 
-#### [ 🎬  免翻墙浏览墙外禁闻、观看YouTube热门视频及电视直播](https://github.com/gfw-breaker/HelloWorld)
 
-#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
+
+#### [ 🎬  《超越恐惧：高智晟律師的故事》](http://129.153.61.140:10000/videos/res1/709/?378838)
+
+#### [ 🎬 《红墙的记忆》— 中南海万人和平上访纪实](http://129.153.61.140:10000/videos/res2/legend/?378838)
+
+#### [ 🎬 《伪火》- 天安门自焚真相](http://129.153.61.140:10000/videos/blog/?378838)&nbsp; | &nbsp;[《六月黑夜》- 六四天安门大屠杀](http://129.153.61.140:10000/videos/88/?378838)
+
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理 ...）](http://129.153.61.140:81/youtube.html?378838)
+
+#### [ 🔥  李锐评习近平：没想到文化程度这么低](http://129.153.61.140:10000/videos/res/Communist/lirui-xi.html?378838)
+
+#### [ 🔥  2014年辛灝年纪念《九评共产党》十周年演讲](http://129.153.61.140:10000/videos/res/jiuping/?378838)
+
+
 
 <div><p>
  【大纪元2022年10月21日讯】朋友们好，今天是10月20号（星期四），欢迎来到《
